syntax = "proto3";

package skysign_proto;

import "google/api/annotations.proto";
import "common.proto";

option java_package = "proto.skysign";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

service CommunicationEdgeService {
    rpc PushTelemetry (PushTelemetryRequest) returns (PushTelemetryResponse) {
        option (google.api.http) = {
            post: "/api/v1/communications/{id}/telemetry"
            body: "*"
        };
    };

    rpc PullCommand (PullCommandRequest) returns (PullCommandResponse) {
        option (google.api.http) = {
            post: "/api/v1/communications/{id}/commands/{command_id}"
            body: "*"
        };
    };

    rpc PullUploadMission (PullUploadMissionRequest) returns (PullUploadMissionResponse) {
        option (google.api.http) = {
            post: "/api/v1/communications/{id}/uploadmissions/{command_id}"
            body: "*"
        };
    };
}

message PushTelemetryRequest {
    string id = 1;
    Telemetry telemetry = 2;
}

message PushTelemetryResponse {
    string id = 1;
    repeated string command_ids = 2;
}

message PullCommandRequest {
    string id = 1;
    string command_id = 2;
}

message PullCommandResponse {
    string id = 1;
    string command_id = 2;
    CommandType type = 3;
}

message PullUploadMissionRequest {
    string id = 1;
    string command_id = 2;
}

message PullUploadMissionResponse {
    string id = 1;
    string command_id = 2;
    string mission_id = 3;
}
